Event en temps réel + restructuration aux petits oignons

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,10 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+//Toastr
+@import "~toastr/toastr.scss";
+
+//jQuery-confirm
+@import "~jquery-confirm/dist/jquery-confirm.min.css";
