Mise en place des posts

--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -26,3 +26,11 @@
 .clickable{
     cursor: pointer;
 }
+
+.align-left{
+    text-align: left !important;
+}
+
+[hidden] {
+    display: none !important;
+}
